# SE489_Group_Project

./: Makefile  Model_Implementation.ipynb  PersonalNotes.txt  README.md  Untitled Diagram.drawio  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  sentiment_analysis_.ipynb  tokenized_test_dataset.pkl  tokenized_validation_dataset.pkl
.github/workflows/: GitHubPages.yml  github-ec2.yml  static.yml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: Model_Implementation.ipynb  predictions.pt  sentiment_analysis_.ipynb
sentiment_analysis/: __init__.py
sentiment_analysis/data/: __init__.py  make_dataset.py
sentiment_analysis/models/: __init__.py  model.py
templates/: home.html
