[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment_analysis"
version = "0.0.1"
description = "Machine learning model for sentiment analysis on movie reviews, with the aim of accurately classifying each review as either positive or negative. By leveraging pre-trained models and fine-tuning techniques, the overall goal is to create a reliable classifier that effectively analyzes large volumes of text data."
authors = [
  { name = "Erica Troupe, Jon Doretti, Robinkumar Ramanbhai Macwan", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["sentiment_analysis"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
